unpackaged/main/default/objects/Historial_Asignacion__c/Historial_Asignacion__c.object-meta.xml
<CustomObject>
    <label>Historial de Asignación</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historial de Asignaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>