unpackaged/main/default/objects/Historial_Asignacion__c/fields/Asesor__c.field-meta.xml
<CustomField>
    <fullName>Asesor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asesor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Historial_de_Asignaciones</relationshipName>
    <type>Lookup</type>
</CustomField>