unpackaged/main/default/objects/Historial_Asignacion__c/fields/Colaborador_Javer__c.field-meta.xml
<CustomField>
    <fullName>Colaborador_Javer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colaborador Javer</label>
    <referenceTo>Colaborador_Javer__c</referenceTo>
    <relationshipName>Historico_de_Asignaciones</relationshipName>
    <type>Lookup</type>
</CustomField>