unpackaged/main/default/objects/Historial_Asignacion__c/fields/Dias_Vencimiento_Prospectador__c.field-meta.xml
<CustomField>
    <fullName>Dias_Vencimiento_Prospectador__c</fullName>
    <label>Días Vencimiento Prospectador</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>