unpackaged/main/default/objects/Historial_Asignacion__c/fields/Estatus_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Asesor__c</fullName>
    <label>Estatus Asesor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASIGNADO</fullName>
            </value>
            <value>
                <fullName>POR ASIGNAR</fullName>
            </value>
            <value>
                <fullName>NO ASIGNADO</fullName>
            </value>
            <value>
                <fullName>REASIGNADO</fullName>
            </value>
            <value>
                <fullName>POR REASIGNAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>