unpackaged/main/default/objects/Historial_Asignacion__c/fields/Estatus_Colaborador_Javer__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Colaborador_Javer__c</fullName>
    <label>Estatus Colaborador Javer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>POR ASIGNAR</fullName>
            </value>
            <value>
                <fullName>ASIGNADO</fullName>
            </value>
            <value>
                <fullName>POR REASIGNAR</fullName>
            </value>
            <value>
                <fullName>NO ASIGNADO</fullName>
            </value>
            <value>
                <fullName>REASIGNADONO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>