unpackaged/main/default/objects/Historial_Asignacion__c/fields/Fecha_LP__c.field-meta.xml
<CustomField>
    <fullName>Fecha_LP__c</fullName>
    <label>Fecha LP</label>
    <type>Date</type>
</CustomField>