unpackaged/main/default/objects/Historial_Asignacion__c/fields/Fecha_ltima_visita__c.field-meta.xml
<CustomField>
    <fullName>Fecha_ltima_visita__c</fullName>
    <label>FechaUltima visita</label>
    <type>Date</type>
</CustomField>