unpackaged/main/default/objects/Historial_Asignacion__c/fields/Fecha_Prospeccion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Prospeccion__c</fullName>
    <label>Fecha de Prospección</label>
    <type>Date</type>
</CustomField>