unpackaged/main/default/objects/Historial_Asignacion__c/fields/Fecha_Vencimiento_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vencimiento_Asesor__c</fullName>
    <label>Fecha Vencimiento Asesor</label>
    <type>Date</type>
</CustomField>