unpackaged/main/default/objects/Historial_Asignacion__c/fields/Fecha_Vencimiento_Prospectador__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vencimiento_Prospectador__c</fullName>
    <label>Fecha Vencimiento Prospectador</label>
    <type>Date</type>
</CustomField>