unpackaged/main/default/objects/Historial_Asignacion__c/fields/Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fraccionamiento</label>
    <referenceTo>Fraccionamiento__c</referenceTo>
    <relationshipLabel>Historial de Asignaciones</relationshipLabel>
    <relationshipName>Historial_de_Asignaciones</relationshipName>
    <type>Lookup</type>
</CustomField>