unpackaged/main/default/objects/Historial_Asignacion__c/fields/JMC_Fecha_Visita__c.field-meta.xml
<CustomField>
    <fullName>JMC_Fecha_Visita__c</fullName>
    <label>Fecha Visita</label>
    <type>Date</type>
</CustomField>