unpackaged/main/default/objects/Historial_Asignacion__c/fields/Lead_Profiler__c.field-meta.xml
<CustomField>
    <fullName>Lead_Profiler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Profiler</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Asignaciones_Usuario</relationshipName>
    <type>Lookup</type>
</CustomField>