unpackaged/main/default/objects/Historial_Asignacion__c/fields/Motivo_Asignacion__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Asignacion__c</fullName>
    <label>Motivo Asignación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Motivo_Asignacion</valueSetName>
    </valueSet>
</CustomField>