unpackaged/main/default/objects/Historial_Asignacion__c/fields/Prospectador__c.field-meta.xml
<CustomField>
    <fullName>Prospectador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospectador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Historico_de_Asignaciones</relationshipName>
    <type>Lookup</type>
</CustomField>