unpackaged/main/default/objects/Historial_Asignacion__c/fields/Prototipo__c.field-meta.xml
<CustomField>
    <fullName>Prototipo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prototipo</label>
    <referenceTo>Prototipo__c</referenceTo>
    <relationshipLabel>Historial de Asignaciones</relationshipLabel>
    <relationshipName>Historial_de_Asignaciones</relationshipName>
    <type>Lookup</type>
</CustomField>